-- V1 : schéma initial — cf. docs/diagrammes/D2-modele-donnees.mmd.
--
-- Cible : PostgreSQL. Les noms de tables et de colonnes suivent le mapping JPA
-- (snake_case explicite via @Column(name = "...")), pour que ddl-auto=validate
-- puisse confronter les entités à ce schéma.
--
-- Les identifiants n'existent pas ici : chaque table entité de D2 est créée avec une
-- colonne d'identité, donc un INSERT sans id produit bien 1, 2, 3...

CREATE TABLE promotion (
    id  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom VARCHAR(120) NOT NULL UNIQUE
);

CREATE TABLE etudiant (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom          VARCHAR(120) NOT NULL,
    promotion_id BIGINT       NOT NULL REFERENCES promotion (id)
);

-- "session" est un mot-clé non réservé en PostgreSQL : utilisable comme nom de table.
CREATE TABLE session (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    titre         VARCHAR(200) NOT NULL,
    promotion_id  BIGINT       NOT NULL REFERENCES promotion (id),
    code          VARCHAR(12)  NOT NULL UNIQUE,
    ouverture_at  TIMESTAMPTZ  NOT NULL,
    expiration_at TIMESTAMPTZ  NOT NULL,
    cloture_at    TIMESTAMPTZ,
    statut        VARCHAR(20)  NOT NULL
);

CREATE TABLE presence (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    session_id  BIGINT      NOT NULL REFERENCES session (id),
    etudiant_id BIGINT      NOT NULL REFERENCES etudiant (id),
    horodatage  TIMESTAMPTZ NOT NULL,
    source      VARCHAR(20) NOT NULL,
    -- ENF4 : une seule présence par étudiant et par session. Contrainte portée par
    -- la base, pas seulement par le service : deux saisies simultanées ne passent pas.
    CONSTRAINT uq_presence_session_etudiant UNIQUE (session_id, etudiant_id)
);

CREATE TABLE exercice (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    session_id  BIGINT       NOT NULL REFERENCES session (id),
    etudiant_id BIGINT       NOT NULL REFERENCES etudiant (id),
    lien        VARCHAR(500) NOT NULL,
    statut      VARCHAR(30)  NOT NULL,
    depose_at   TIMESTAMPTZ  NOT NULL,
    -- D2 : un étudiant dépose au plus un exercice par session.
    CONSTRAINT uq_exercice_session_etudiant UNIQUE (session_id, etudiant_id)
);

CREATE TABLE relecture (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    exercice_id  BIGINT        NOT NULL REFERENCES exercice (id),
    relecteur_id BIGINT        NOT NULL REFERENCES etudiant (id),
    note         INTEGER,
    commentaire  VARCHAR(2000),
    statut       VARCHAR(20)   NOT NULL,
    assignee_at  TIMESTAMPTZ   NOT NULL,
    rendu_at     TIMESTAMPTZ,
    -- RG4 : un exercice n'a qu'un seul relecteur.
    CONSTRAINT uq_relecture_exercice UNIQUE (exercice_id),
    -- RG3 : une note est un entier compris entre 0 et 20.
    CONSTRAINT ck_relecture_note CHECK (note IS NULL OR note BETWEEN 0 AND 20),
    -- RG12 : une relecture rendue porte forcément une note et une date de rendu.
    CONSTRAINT ck_relecture_rendue CHECK (
        statut <> 'RENDUE' OR (note IS NOT NULL AND rendu_at IS NOT NULL)
    )
);

-- RG2 (pas d'auto-relecture) ne s'exprime pas par une contrainte simple entre deux
-- tables : il reste contrôlé dans RelectureService.

CREATE INDEX idx_etudiant_promotion ON etudiant (promotion_id);
CREATE INDEX idx_session_promotion ON session (promotion_id);
CREATE INDEX idx_presence_etudiant ON presence (etudiant_id);
CREATE INDEX idx_exercice_session ON exercice (session_id);
CREATE INDEX idx_relecture_relecteur ON relecture (relecteur_id);
